# ScenicRules

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile
docs/source/: conf.py  evaluation_human.md  falsification.md  index.rst  installation.rst  overview.md  preprocessing.md  rulebook.md  rules.md  scenarios.rst
scenarios/: README.md  api.txt  auto_scenario_generator.py  scenicnl.py  utils.py
scenarios/common/: common20_1.scenic  common20_10.scenic  common20_100.scenic  common20_11.scenic  common20_12.scenic  common20_13.scenic  common20_14.scenic  common20_15.scenic  common20_16.scenic  common20_17.scenic  common20_18.scenic  common20_19.scenic  common20_2.scenic  common20_20.scenic  common20_21.scenic  common20_22.scenic  common20_23.scenic  common20_24.scenic  common20_25.scenic  common20_26.scenic  common20_27.scenic  common20_28.scenic  common20_29.scenic  common20_3.scenic  common20_30.scenic  common20_31.scenic  common20_32.scenic  common20_33.scenic  common20_34.scenic  common20_35.scenic  common20_36.scenic  common20_37.scenic  common20_38.scenic  common20_39.scenic  common20_4.scenic  common20_40.scenic  common20_41.scenic  common20_42.scenic  common20_43.scenic  common20_44.scenic  (+260 more)
scenarios/common_specs/: common_scenarios_20.jsonl  common_scenarios_21.jsonl  common_scenarios_30.jsonl
scenarios/crash/: crash_apple_082321.scenic  crash_apple_10232023.scenic  crash_apple_120621-pdf_gemini.scenic  crash_cruise_030623-pdf_gemini.scenic  (+23 more)
tutorial/: tutorial.ipynb  tutorial.scenic  tutorial_rulebook.graph  tutorial_rules.py
(+28 files in other folders)
