[project]
name = "scenic-rules"
version = "0.1.0"
description = "An autonomous driving benchmark with multi-objective specifications and abstract scenarios"

readme = "README.md"
requires-python = ">=3.10"

dependencies = [
	"numpy >= 1.21",
	"scipy ~= 1.7",
	"dotmap ~= 1.3",
	"metric-temporal-logic >= 0.1.5",
	"matplotlib ~= 3.2",
	"easydict ~= 1.9",
	"joblib ~= 1.2",
	"dill >= 0.3.1",
	"future >= 0.18.3",
	"pandas >= 1.3, <3",
	"scikit-learn ~= 1.0",
	"pygame ~= 2.1",
	"kmodes <= 0.10.2",
	"scenic[metadrive] @ git+https://github.com/revacholiere/Scenic.git",
	"progressbar2 ~= 3.53",
	"networkx >= 2.6",
	"statsmodels >= 0.13.2",
	"matplotx ~= 0.3.10",
	"geopandas >= 0.12.2",
	"cached_property ~= 2.0.1",
	"orjson ~= 3.10.15",
	"tqdm ~= 4.67.1",
	"fiona ~= 1.9.5",
	"choix",
	"hydra-core ~= 1.3.2",
	"timeout-decorator ~= 0.5.0",
	"verifai ~= 2.1.2",
	"antlr4-python3-runtime == 4.9.*",
	"google-genai"
]
